[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "textract-field-memory"
version = "0.2.0"
description = "Spatial field location memory for AWS Textract document processing pipelines."
readme = "README.md"
license = {text = "MIT-0"}
requires-python = ">=3.9"
dependencies = []
keywords = [
    "aws",
    "textract",
    "ocr",
    "document-processing",
    "spatial-memory",
    "template-learning",
    "field-extraction",
    "zonal-ocr",
    "anomaly-detection",
    "document-routing",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: General",
]

[[project.authors]]
name = "avneetbansal-aws"

[project.urls]
Homepage = "https://code.aws.dev/proserve/aws-ml-companions/textract-field-memory"
Repository = "https://code.aws.dev/proserve/aws-ml-companions/textract-field-memory"
Documentation = "https://code.aws.dev/proserve/aws-ml-companions/textract-field-memory#readme"
Issues = "https://code.aws.dev/proserve/aws-ml-companions/textract-field-memory/-/issues"

[project.optional-dependencies]
dev = ["pytest>=7.0", "hypothesis>=6.0"]
dashboard = ["streamlit>=1.20", "plotly>=5.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
